@@ -365,11 +365,8 @@ clean: modules_clean
 	rm -rf $(ROMFSDIR)/*
 	rm -f $(LINUXDIR)/linux
 	rm -f $(LINUXDIR)/arch/mips/ramdisk/*.gz
-	rm -rf $(ROOTDIR)/etc/Wireless/RT2860
 	rm -f $(ROOTDIR)/etc/compile-date
 	rm -f $(ROOTDIR)/etc/scripts/config.sh
-	rm -f $(ROOTDIR)/etc/default/RT2860_default_novlan
-	rm -f $(ROOTDIR)/etc/Wireless/rf.bin
 	rm -f config.tk
 	rm -f .tmp*
 	rm -f sdk_version.h
