@@ -80,7 +80,7 @@ cp -fv ./configs/all/config-cpp		./uClibc++/.config
 cp -fv ./configs/all/config-all		.config
 #######################################################################
 ln -fs vendors/Ralink/RT3052/config.arch config.arch
-ln -fs config/autoconf.h autoconf.h
+ln -fs config/autoconf.h		 autoconf.h
 #######################################################################
 
 #################################PER-DEVICES###########################
@@ -89,33 +89,21 @@ if [ "$MODE" = "1T1R" ] ; then
     cp -fv ./configs/all/config-config					./config/.config
     cp -fv ./configs/all/config-busybox					./user/busybox/.config
     cp -fv ./configs/all/config-lib					./lib/.config
-    cp -fv ./configs/defaults/RT2860_default_novlan-1T1R		./etc/default/RT2860_default_novlan
-    cp -fv ./configs/defaults/RT2860.dat-1T1R				./etc/Wireless/RT2860/RT2860.dat
-    ln -sf RT3050_AP_1T1R_V1_0.bin					./etc/Wireless/rf.bin
 elif [ "$MODE" = "2T2R" ] ; then
     cp -fv ./configs/kernel/config-kernel-2t2r$SAVE_MEM			./linux/.config
     cp -fv ./configs/all/config-busybox					./user/busybox/.config
     cp -fv ./configs/all/config-config					./config/.config
     cp -fv ./configs/all/config-lib					./lib/.config
-    cp -fv ./configs/defaults/RT2860_default_novlan-2T2R		./etc/default/RT2860_default_novlan
-    cp -fv ./configs/defaults/RT2860.dat-2T2R				./etc/Wireless/RT2860/RT2860.dat
-    ln -sf RT3052_AP_2T2R_V1_1.bin					./etc/Wireless/rf.bin
 elif [ "$MODE" = "2T2R-USB" ] ; then
     cp -fv ./configs/kernel/config-kernel-2t2r-USB-8M			./linux/.config
     cp -fv ./configs/all/config-busybox-USB-8M				./user/busybox/.config
     cp -fv ./configs/all/config-config-USB-8M				./config/.config
-    cp -fv ./configs/all/config-lib-USB-8M					./lib/.config
-    cp -fv ./configs/defaults/RT2860_default_novlan-2T2R		./etc/default/RT2860_default_novlan
-    cp -fv ./configs/defaults/RT2860.dat-2T2R				./etc/Wireless/RT2860/RT2860.dat
-    ln -sf RT3052_AP_2T2R_V1_1.bin					./etc/Wireless/rf.bin
+    cp -fv ./configs/all/config-lib-USB-8M				./lib/.config
 elif [ "$MODE" = "2T2R-USB-IPV6" ] ; then
     cp -fv ./configs/kernel/config-kernel-2t2r-USB-IPV6-8M		./linux/.config
     cp -fv ./configs/all/config-busybox-USB-IPV6-8M			./user/busybox/.config
     cp -fv ./configs/all/config-config-USB-IPV6-8M			./config/.config
     cp -fv ./configs/all/config-lib-USB-IPV6-8M				./lib/.config
-    cp -fv ./configs/defaults/RT2860_default_novlan-2T2R		./etc/default/RT2860_default_novlan
-    cp -fv ./configs/defaults/RT2860.dat-2T2R				./etc/Wireless/RT2860/RT2860.dat
-    ln -sf RT3052_AP_2T2R_V1_1.bin					./etc/Wireless/rf.bin
 else
     echo "Configs not found."
     exit 1
