@@ -1,0 +1,188 @@
+#The word of "Default" must not be removed
+Default
+RFICType=8
+CountryRegion=5
+CountryRegionABand=0
+CountryCode=RU
+RDRegion=CE
+BssidNum=1
+SSID1=Wive-RTNL
+SSID2=
+SSID3=
+SSID4=
+SSID5=
+SSID6=
+SSID7=
+SSID8=
+WirelessMode=7
+FixedTxMode=
+TxRate=0
+Channel=2
+AutoChannelSelect=0
+ChannelGeography=2
+BasicRate=351
+BeaconPeriod=100
+DtimPeriod=1
+TxPower=50
+DisableOLBC=0
+BGProtection=0
+TxPreamble=1
+RTSThreshold=2347
+FragThreshold=2346
+TxBurst=1
+ForceTxBurst=0
+PktAggregate=1
+TurboRate=0
+WmmCapable=0
+McastPhyMode=3
+McastMcs=0
+APAifsn=3;7;1;1
+APCwmin=4;4;3;2
+APCwmax=6;10;4;3
+APTxop=0;0;94;47
+APACM=0;0;0;0
+BSSAifsn=3;7;2;2
+BSSCwmin=4;4;3;2
+BSSCwmax=10;10;4;3
+BSSTxop=0;0;94;47
+BSSACM=0;0;0;0
+AckPolicy=0;0;0;0
+APSDCapable=1
+DLSCapable=0
+NoForwarding=0
+NoForwardingBTNBSSID=0
+HideSSID=0
+ShortSlot=1
+IEEE8021X=0
+IEEE80211H=0
+CarrierDetect=0
+CSPeriod=6
+RDRegion=
+StationKeepAlive=0
+DfsLowerLimit=0
+DfsUpperLimit=0
+FixDfsLimit=0
+LongPulseRadarTh=0
+AvgRssiReq=0
+DFS_R66=0
+BlockCh=
+PreAuth=0
+AuthMode=OPEN
+EncrypType=NONE
+RekeyMethod=DISABLE
+RekeyInterval=3600
+PMKCachePeriod=10
+WPAPSK1=1234567890
+WPAPSK2=
+WPAPSK3=
+WPAPSK4=
+WPAPSK5=
+WPAPSK6=
+WPAPSK7=
+WPAPSK8=
+DefaultKeyID=1
+Key1Type=0
+Key1Str1=
+Key1Str2=
+Key1Str3=
+Key1Str4=
+Key1Str5=
+Key1Str6=
+Key1Str7=
+Key1Str8=
+Key2Type=0
+Key2Str1=
+Key2Str2=
+Key2Str3=
+Key2Str4=
+Key2Str5=
+Key2Str6=
+Key2Str7=
+Key2Str8=
+Key3Type=0
+Key3Str1=
+Key3Str2=
+Key3Str3=
+Key3Str4=
+Key3Str5=
+Key3Str6=
+Key3Str7=
+Key3Str8=
+Key4Type=0
+Key4Str1=
+Key4Str2=
+Key4Str3=
+Key4Str4=
+Key4Str5=
+Key4Str6=
+Key4Str7=
+Key4Str8=
+HT_HTC=1
+HT_RDG=1
+HT_OpMode=0
+HT_MpduDensity=7
+HT_EXTCHA=0
+HT_BW=1
+HT_AutoBA=1
+HT_BADecline=0
+HT_AMSDU=1
+HT_BAWinSize=64
+HT_GI=1
+HT_STBC=1
+HT_MCS=33
+HT_DisallowTKIP=0
+HT_TxStream=2
+HT_RxStream=2
+HT_PROTECT=1
+HT_40MHZ_INTOLERANT=0
+HT_MIMOPSMode=0
+HT_BSSCoexistence=0
+HT_BSSCoexApCntThr=16
+AP2040Rescan=0
+WscConfMode=0
+WscConfStatus=2
+AccessPolicy0=0
+AccessControlList0=
+AccessPolicy1=0
+AccessControlList1=
+AccessPolicy2=0
+AccessControlList2=
+AccessPolicy3=0
+AccessControlList3=
+AccessPolicy4=0
+AccessControlList4=
+AccessPolicy5=0
+AccessControlList5=
+AccessPolicy6=0
+AccessControlList6=
+AccessPolicy7=0
+AccessControlList7=
+WdsEnable=0
+WdsPhyMode=HTMIX;HTMIX;HTMIX;HTMIX
+WdsTxMcs=33;33;33;33
+WdsEncrypType=NONE;NONE;NONE;NONE
+WdsList=
+WdsKey=
+RADIUS_Server=
+RADIUS_Port=1812
+RADIUS_Key=
+RADIUS_Acct_Server=
+RADIUS_Acct_Port=1813
+RADIUS_Acct_Key=
+own_ip_addr=
+EAPifname=
+PreAuthifname=
+session_timeout_interval=0
+quiet_interval=0
+AutoConnect=0
+FastConnect=0
+HiPower=0
+AutoRoaming=0
+TGnWifiTest=0
+RadioOn=1
+SSID=
+WPAPSK=
+Key1Str=
+Key2Str=
+Key3Str=
+Key4Str=
